Add partial resize functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <body>
         <h1>Etch-A-Sketch</h1>
         <div class="grid-container">
-
+        </div>
+        <div class="buttons">
+        <button id="resize-button">RESIZE</button>
+        <button id="erase-button" onclick="resizeGrid()">ERASE</button>
         </div>
     </body>
 </html>
