--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <h1>Etch-A-Sketch</h1>
-        <div class="grid-container">
-        </div class>
         <div class="buttons">
         <button id="resize-button">RESIZE</button>
-        <button id="erase-button" onclick="resizeGrid()">ERASE</button>
+        <h1>Etch-A-Sketch</h1>
+        <button id="erase-button">ERASE</button>
         </div>
+        <div class="grid-container">
+        </div class>
+        
     </body>
 </html>
