Add rainbow mode

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <h1>Etch-A-Sketch</h1>
         <div class="buttons">
         <button id="resize-button">RESIZE</button>
-        <h1>Etch-A-Sketch</h1>
+        <button id="rainbow-button">RAINBOW</button>
         <button id="erase-button">ERASE</button>
         </div>
         <div class="grid-container">
